--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 2010-12-28-hssf-builder/.gradle/
 2010-12-28-hssf-builder/build/
 2010-12-28-hssf-builder/*.iws
+2011-01-05-zip-builder/.gradle/
+2011-01-05-zip-builder/build/
+2011-01-05-zip-builder/*.iws
+2011-01-05-zip-builder/tmp/
