--- a/2011-01-05-zip-builder/build.gradle
+++ b/2011-01-05-zip-builder/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
   groovy group: "org.codehaus.groovy", name: "groovy", version: "1.7.6"
   testCompile group: "junit", name: "junit", version: "4.8.1"
+  testCompile group: "commons-io", name: "commons-io", version: "2.0.1"
 }
 
 
