--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 2011-01-05-zip-builder/build/
 2011-01-05-zip-builder/*.iws
 2011-01-05-zip-builder/tmp/
+2011-01-17-groovy-streams/.gradle/
+2011-01-17-groovy-streams/build/
+2011-01-17-groovy-streams/*.iws
