--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-2010-12-28-hssf-builder/.gradle/
-2010-12-28-hssf-builder/build/
-2010-12-28-hssf-builder/*.iws
-2011-01-05-zip-builder/.gradle/
-2011-01-05-zip-builder/build/
-2011-01-05-zip-builder/*.iws
-2011-01-05-zip-builder/tmp/
-2011-01-17-groovy-streams/.gradle/
-2011-01-17-groovy-streams/build/
-2011-01-17-groovy-streams/*.iws
+**/.gradle/
+**/build/
+**/*.iws
