--- a/2012-01-11-groovy-sql-embedded/jul-to-slf4j.properties
+++ b/2012-01-11-groovy-sql-embedded/jul-to-slf4j.properties
@@ -6,9 +6,4 @@
 # message - the formatted log message returned from the Formatter.formatMessage(LogRecord) method. It uses java.text formatting and does not use the java.util.Formatter format argument.
 # thrown - a string representing the throwable associated with the log record and its backtrace beginning with a newline character, if any; otherwise, an empty string.
 .level=FINEST
-#handlers= java.util.logging.ConsoleHandler
-#java.util.logging.ConsoleHandler.level = FINEST
-#java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
-#java.util.logging.SimpleFormatter.format=[%1$tF %1$tT] %4$s: %5$s %n
-#groovy.sql.level=FINEST
-#org.springframework.level=WARNING
+groovy.sql.level=FINEST
